--- a/WolvenKit/Views/Editors/JournalEditor/JournalEditorView.xaml
+++ b/WolvenKit/Views/Editors/JournalEditor/JournalEditorView.xaml
@@ -11,7 +11,7 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </catel:UserControl.Resources>
-    <Grid Height="600" Width="900">
+    <Grid >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="1*" />
