--- a/WolvenKit/Views/Editors/BulkEditor/BulkEditorView.xaml
+++ b/WolvenKit/Views/Editors/BulkEditor/BulkEditorView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.BulkEditor.BulkEditorView"
+<catel:UserControl x:Class="WolvenKit.Views.BulkEditor.BulkEditorView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
@@ -14,17 +14,76 @@
     </catel:UserControl.Resources>
 
 
-    <Grid>
-        <StackPanel Orientation="Vertical">
-            <hc:PropertyGrid Width="400" Height="300"></hc:PropertyGrid>
+    <Grid Background="{DynamicResource RegionBrush}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="45"/>
 
-            <Grid >
-                <Button Width="150" Content="Run"/>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="150"/>
+        </Grid.RowDefinitions>        
+            <hc:PropertyGrid Margin="0" Grid.Row="1" Height="auto"></hc:PropertyGrid>
+        <Button HorizontalAlignment="Stretch" Margin="10,10,10,0"  Background="{DynamicResource MahApps.Brushes.Accent3}" VerticalAlignment="Center"   Content="Run"/>
 
-                <hc:WaveProgressBar HorizontalAlignment="Right" Margin="0,15,0,0"></hc:WaveProgressBar>
-            </Grid>
+
+
+        
+
+        <Grid Height="150" HorizontalAlignment="Center" VerticalAlignment="Bottom" Grid.Row="2" >
+    
+            <hc:WaveProgressBar WaveFill="Transparent" Grid.Row="2" Margin="5,10,0,0" Value="{Binding Value, ElementName=ProgressBall}"  Background="Transparent" BorderBrush="Transparent" x:Name="ACTUALPROGRESBAR" >
          
-        </StackPanel>
+            </hc:WaveProgressBar>
+
+            <Border Grid.Row="2" Margin="0,0,0,0"  Width="60" HorizontalAlignment="Center"  VerticalAlignment="Center" Height="70" Background="Transparent"   >
+            <Grid>
+
+                <Border>
+                    <Border.OpacityMask>
+                        <ImageBrush ImageSource="/Resources/Icons/SeeTroughIcon.png"/>
+                    </Border.OpacityMask>
+                    <Grid>
+
+                        <Grid  Grid.Row="1" >
+                                <hc:WaveProgressBar x:Name="ProgressBall"  Value="90" Background="Transparent" WaveFill="{DynamicResource MahApps.Brushes.AccentBase}" Height="90" Width="95" VerticalAlignment="Center" HorizontalAlignment="Center" ></hc:WaveProgressBar>
+                        </Grid>
+                 
+
+
+                    </Grid>
+                </Border>
+            </Grid>
+
+
+
+        </Border>
+
+        <Border Grid.Row="2" Margin="0,0,0,0"  Width="63" HorizontalAlignment="Center"  VerticalAlignment="Center" Height="72" Background="Transparent"   >
+            <Border>
+                <Border.OpacityMask>
+                    <ImageBrush ImageSource="/Resources/Icons/HomeSickTransp.png"/>
+                </Border.OpacityMask>
+                <Grid>
+
+
+                    <Grid >
+
+                        <Grid Background="{DynamicResource MahApps.Brushes.Accent2}"  Margin="0">
+                            <Image  Stretch="Fill"  Source="pack://application:,,,/Resources/Icons/HomeSickTransp.png" Margin="0,-1,0,0" />
+
+                        </Grid>
+
+                    </Grid>
+
+                </Grid>
+            </Border>
+
+        </Border>
+
+
+
+        </Grid>
+
+
     </Grid>
 
 </catel:UserControl>
