--- a/WolvenKit/Views/Editors/CsvEditor/CsvEditorView.xaml
+++ b/WolvenKit/Views/Editors/CsvEditor/CsvEditorView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.CsvEditor.CsvEditorView"
+<catel:UserControl x:Class="WolvenKit.Views.CsvEditor.CsvEditorView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
@@ -14,7 +14,7 @@
     </catel:UserControl.Resources>
 
 
-    <Grid Width="790" Height="390">
+    <Grid >
         <StackPanel Orientation="Vertical">
 
             <StackPanel Orientation="Horizontal" >
