--- a/WolvenKit/Views/Editors/HexEditor/HexEditorView.xaml
+++ b/WolvenKit/Views/Editors/HexEditor/HexEditorView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.HexEditor.HexEditorView"
+<catel:UserControl x:Class="WolvenKit.Views.HexEditor.HexEditorView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" IsVisibleChanged="UserControl_IsVisibleChanged"
@@ -14,8 +14,8 @@
     </catel:UserControl.Resources>
 
 
-    <Grid Width="600" Height="300"> 
-        <hexz:HexEditor Width="Auto" Height="Auto"/>
+    <Grid> 
+        <hexz:HexEditor Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" Width="Auto" Height="Auto"/>
 
     </Grid>
 
