--- a/WolvenKit/Views/Tools/AudioTool/AudioToolView.xaml
+++ b/WolvenKit/Views/Tools/AudioTool/AudioToolView.xaml
@@ -1,19 +1,14 @@
-﻿<catel:DataWindow x:Class="WolvenKit.Views.AudioTool.AudioToolView"
+<catel:UserControl x:Class="WolvenKit.Views.AudioTool.AudioToolView"
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:catel="http://schemas.catelproject.com"   
                   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" 
                   xmlns:hc="https://handyorg.github.io/handycontrol" 
                   xmlns:svl1="clr-namespace:WPFSoundVisualizationLib;assembly=WPFSoundVisualizationLibNet5"
-                  ShowInTaskbar="True" 
-                  AllowsTransparency="True" 
-                  ResizeMode="CanResizeWithGrip" 
                   BorderBrush="{x:Null}" 
-                  WindowStartupLocation="CenterScreen"
-                  WindowStyle="None" 
-                  Title="Code Editor" IsVisibleChanged="DataWindow_IsVisibleChanged">
+                  IsVisibleChanged="DataWindow_IsVisibleChanged">
 
-    <catel:DataWindow.Resources>
+    <catel:UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <hc:ThemeResources/>
@@ -146,53 +141,23 @@
             <!--endregion-->
         </ResourceDictionary>
 
-    </catel:DataWindow.Resources>
+    </catel:UserControl.Resources>
 
     <Border hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}" Width="auto" Height="auto" BorderBrush="{DynamicResource MahApps.Brushes.Accent4}" BorderThickness="1">
 
         <Grid Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
 
-            <Grid x:Name="DraggableTitleBar" VerticalAlignment="Top" Grid.ColumnSpan="2" Background="{DynamicResource RegionBrush}" MouseLeftButtonDown="DraggableTitleBar_MouseLeftButtonDown">
-
-                <!--TitleBar  Please add onmousedown event to be able to drag the window-->
-                <Button 
-                    Style="{StaticResource ButtonIcon}" 
-                    hc:IconElement.Geometry="{DynamicResource GlobalClose}" 
-                    Click="Button_Click" 
-                    Background="Transparent" 
-                    BorderBrush="{x:Null}"  
-                    HorizontalAlignment="Right" 
-                    VerticalAlignment="Center" 
-                    Margin="3,3,5,3" >
-                </Button>
-
-                <Button  Width="40"
-                    Style="{StaticResource ButtonIcon}"
-                    hc:IconElement.Geometry="{DynamicResource GlobalMinimize}"
-                    Click="Button_Click_1"
-                    BorderBrush="{x:Null}"
-                    Background="Transparent" 
-                    HorizontalAlignment="Right"
-                    VerticalAlignment="Center"
-                    Margin="3,3,45,3" >
-                </Button>
-
-
-
-
-                <TextBlock Margin="13,0,0,0" Height="23" Text="Audio Tool"  HorizontalAlignment="Left" VerticalAlignment="Center"/>
-
-            </Grid>
+     
 
 
 
 
 
-            <Grid  Margin="0,33,0,0">
+            <Grid  Margin="0,0,0,0">
 
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="1*" MinWidth="400"/>
+                    <ColumnDefinition Width="1*"/>
 
                 </Grid.ColumnDefinitions>
 
@@ -409,4 +374,4 @@
     </Border>
 
 
-</catel:DataWindow>
+</catel:UserControl>
