--- a/WolvenKit/Views/Tools/AssetBrowser/AssetBrowserView.xaml
+++ b/WolvenKit/Views/Tools/AssetBrowser/AssetBrowserView.xaml
@@ -2,7 +2,7 @@
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"     
                   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-                   xmlns:hc="https://handyorg.github.io/handycontrol"
+                  xmlns:hc="https://handyorg.github.io/handycontrol"
                   xmlns:catel="http://schemas.catelproject.com" xmlns:Fluent="urn:fluent-ribbon"  BorderBrush="{x:Null}"     IsVisibleChanged="DataWindow_IsVisibleChanged" >
 
     <catel:UserControl.Resources>
@@ -52,9 +52,21 @@
 
                     <ToolBar Band="0" Style="{StaticResource ToolBarBaseStyle}" Padding="6">
                         <Menu Background="Transparent" VerticalAlignment="Center">
-                            <Button Style="{StaticResource ButtonIcon}" Width="40" hc:IconElement.Geometry="{DynamicResource GlobalLeftArrow}" Background="Transparent" BorderBrush="{x:Null}">
+                            <Button
+                                Style="{StaticResource ButtonIcon}"
+                                Width="40"
+                                hc:IconElement.Geometry="{DynamicResource GlobalLeftArrow}"
+                                Background="Transparent"
+                                BorderBrush="{x:Null}">
                             </Button>
-                            <Button  Style="{StaticResource ButtonIcon}" Width="40" hc:IconElement.Geometry="{DynamicResource AssetBrowserHome}" Background="Transparent" BorderBrush="{x:Null}" Click="ButtonBase_OnClick" RenderTransformOrigin="0.5,0.5">
+                            <Button
+                                Style="{StaticResource ButtonIcon}"
+                                Width="40"
+                                hc:IconElement.Geometry="{DynamicResource AssetBrowserHome}"
+                                Background="Transparent"
+                                BorderBrush="{x:Null}"
+                                Command="{Binding HomeCommand}"
+                                RenderTransformOrigin="0.5,0.5">
                                 <Button.RenderTransform>
                                     <TransformGroup>
                                         <ScaleTransform/>
@@ -88,7 +100,14 @@
 
                     <ToolBar Band="0" Style="{StaticResource ToolBarBaseStyle}" Padding="6">
                         <Menu Background="Transparent" VerticalAlignment="Center">
-                            <hc:SearchBar  MinWidth="100" SearchStarted="SearchBar_OnSearchStarted" hc:InfoElement.Placeholder="Search something"></hc:SearchBar>
+                            <hc:SearchBar  MinWidth="100"
+                                           hc:InfoElement.Placeholder="Search something">
+                                <hc:Interaction.Triggers>
+                                    <hc:EventTrigger EventName="SearchStarted">
+                                        <hc:EventToCommand Command="{Binding SearchStartedCommand}" PassEventArgsToCommand="True"/>
+                                    </hc:EventTrigger>
+                                </hc:Interaction.Triggers>
+                            </hc:SearchBar>
                         </Menu>
                     </ToolBar>
 
@@ -146,17 +165,35 @@
                     <hc:TabControl Grid.Column="0" IsAnimationEnabled="True" ShowCloseButton="True" IsDraggable="True">
                         <hc:TabItem Header="Depot">
                             <!-- Bind Header to selected item in treeview-->
-                            <ListView BorderBrush="{DynamicResource MahApps.Brushes.Accent4}" MouseDoubleClick="ListView_MouseDoubleClick" Background="Transparent" SelectedItem="{Binding SelectedNode, Mode=OneWayToSource}" ItemsSource="{Binding CurrentNodeFiles}">
+                            <ListView BorderBrush="{DynamicResource MahApps.Brushes.Accent4}"
+                                      Background="Transparent"
+                                      SelectedItem="{Binding SelectedNode, Mode=OneWayToSource}"
+                                      ItemsSource="{Binding CurrentNodeFiles}">
                                 <ListView.View>
                                     <GridView>
                                         <GridViewColumn Width="500" Header="Name" DisplayMemberBinding="{Binding Name}"/>
                                         <GridViewColumn Width="Auto" Header="Size" DisplayMemberBinding="{Binding Size}"/>
                                     </GridView>
                                 </ListView.View>
+                                <hc:Interaction.Triggers>
+                                    <hc:EventTrigger EventName="MouseDoubleClick">
+                                        <hc:EventToCommand Command="{Binding ImportFileCommand}"/>
+                                    </hc:EventTrigger>
+                                </hc:Interaction.Triggers>
                             </ListView>
                         </hc:TabItem>
                     </hc:TabControl>
-                    <Button Click="ShowPreviewButton_Click" Style="{StaticResource ButtonIcon}" Width="40" hc:IconElement.Geometry="{DynamicResource AssetBrowserOpenPreview}" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,15,15" Background="Transparent" BorderBrush="Transparent" RenderTransformOrigin="0.5,0.5">
+                    <Button
+                        Command="{Binding TogglePreviewCommand}"
+                        Style="{StaticResource ButtonIcon}"
+                        Width="40"
+                        hc:IconElement.Geometry="{DynamicResource AssetBrowserOpenPreview}"
+                        VerticalAlignment="Bottom"
+                        HorizontalAlignment="Right"
+                        Margin="0,0,15,15"
+                        Background="Transparent"
+                        BorderBrush="Transparent"
+                        RenderTransformOrigin="0.5,0.5">
                         <Button.RenderTransform>
                             <TransformGroup>
                                 <ScaleTransform/>
